--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,15 @@
 ---
-import ScrollDone from "../components/scroll-done.svelte";
-
-
+import Counter from "../components/counter.svelte";
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 	</head>
-	<body>
+	<body style={{ textAlign:"center" }}>
 		<h1>スクロールしてね</h1>
 		<div style="height: 200vh"></div>
-		<ScrollDone client:visible />
+		<Counter client:visible />
+		<div style="height: 200vh"></div>
 	</body>
 </html>
